# ply-image

./: CMakeLists.txt  ply-image.c
